// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemRow renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 3,
      "borderWidth": 1,
      "flexDirection": "row",
      "marginTop": 10,
      "opacity": 1,
      "paddingLeft": 15,
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 30,
      }
    }
  >
    ⬜
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginBottom": 15,
          "marginLeft": 11,
          "marginTop": 15,
        },
        false,
      ]
    }
  >
    Test list item text
  </Text>
</View>
`;

exports[`ListRow renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#EEE",
      "borderRadius": 3,
      "borderWidth": 1,
      "marginTop": 10,
      "opacity": 1,
      "padding": 15,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 3,
    }
  }
>
  <Text>
    Test list title
  </Text>
</View>
`;
